increase security, update logs and messaging